--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -24,11 +24,13 @@
 
         <!-- need per file scripts and styles :/ -->
         <link rel="stylesheet" type="text/css" href="/core/admin/assets/lib/codemirror/codemirror.css"> <!-- TODO: Kill this - #29 -->
+        <link rel="stylesheet" type="text/css" href="/core/admin/assets/lib/icheck/css/icheck.css"> <!-- TODO: Kill this - #29 -->
 
         <!-- jQuery is for all so here for now -->
         <script type="text/javascript" src="/core/admin/assets/lib/jquery/jquery.min.js"></script>
         <script type="text/javascript" src="/core/admin/assets/js/toggle.js"></script>
         <script type="text/javascript" src="/core/admin/assets/js/admin-ui-temp.js"></script>
+        <script type="text/javascript" src="/core/admin/assets/lib/icheck/jquery.icheck.min.js"></script> <!-- The right place for this? -->
     </head>
     <body class="{{bodyClass}}">
         {{> navbar}}
