--- a/core/admin/views/settings.hbs
+++ b/core/admin/views/settings.hbs
@@ -162,7 +162,39 @@
         </section>
       </header>
       <section class="content">
-        <img src="/core/admin/assets/img/users.png" alt="users" style="width:900px;height:auto" />
+        <h6 class="sub">Invited Users</h6>
+        <ul class="users">
+            <li class="clearfix">
+                <div class="user_image"></div>
+                <div class="user_info">
+                    <span class="name">Some Name</span>
+                    <span class"timestamp">Invitation Sent: 7 hours ago</span>
+                </div>
+            </li>
+        </ul>
+        <h6 class="sub">Active Users</h6>
+        <ul class="users">
+            <li class="clearfix">
+                <div class="user_image">
+                    <img src="/core/admin/assets/img/user.jpg" alt="user"/>
+                </div>
+                <div class="user_info">
+                    <span class="name">Some Name</span>
+                    <span class"timestamp">Last Seen: 7 hours ago</span>
+                </div>
+                <label class="admin">Admin</label>
+            </li>
+            <li class="clearfix">
+                <div class="user_image">
+                      <img src="/core/admin/assets/img/user.jpg" alt="user"/>
+                </div>
+                <div class="user_info">
+                    <span class="name">Some Name</span>
+                    <span class"timestamp">Last Seen: 2 days ago</span>
+                </div>
+                <label class="editor">Editor</label>
+            </li>
+        </ul>
       </section>
     </section>
   </div>
