closes #26 - admin login
There is now a login page. Trying to access any authenticated route will redirect you to a login page if you are not logged in.
Logging in works with the same hard-coded username and password & remembers you for a session.
Logging in will redirect you to your original route.
Flashes are present although they don't really appear in the right place.

--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -16,7 +16,6 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
 
         <link rel="shortcut icon" href="/favicon.ico">
-        <link rel="logo" type="image/svg" href="/core/admin/assets/img/logo.svg"/>
         <meta http-equiv="cleartype" content="on">
 
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400,700">
@@ -32,7 +31,9 @@
         {{{block "headScripts"}}}
     </head>
     <body class="{{bodyClass}}">
-        {{> navbar}}
+        {{#unless hideNavbar}}
+            {{> navbar}}
+        {{/unless}}
 
         <main role="main">
             {{> flashes}}
