First steps towards saving settings

--- a/core/admin/views/settings.hbs
+++ b/core/admin/views/settings.hbs
@@ -128,13 +128,13 @@
 
                     <label>
                         <b>SEO Title Pattern</b>
-                        <input id="blog-title" type="text" value="[Post Name] - [Site Title]" />
+                        <input id="seo-title" type="text" value="[Post Name] - [Site Title]" />
                         <p>The pattern used to display your title tags</p>
                     </label>
 
                     <label>
                         <b>SEO Description Pattern</b>
-                        <input id="blog-title" type="text" value="Auto" />
+                        <input id="seo-description" type="text" value="Auto" />
                         <p>The pattern used to display your meta descriptions</p>
                     </label>
 
