Include full UTC times in settings

--- a/core/admin/views/settings.hbs
+++ b/core/admin/views/settings.hbs
@@ -75,7 +75,37 @@
                     <label>
                         <b>Time Zone</b>
                         <select id="url-structure" name="general[timezone]">
-                            <option value="1">Vienna (UTC+1)</option>
+                            <option value="-12.0">Eniwetok, Kwajalein (UTC-12)</option>
+                            <option value="-11.0">Midway Island, Samoa (UTC-11)</option>
+                            <option value="-10.0">Hawaii (UTC-10)</option>
+                            <option value="-9.0">Alaska (UTC-9)</option>
+                            <option value="-8.0">Pacific Time (US &amp; Canada) (UTC-8)</option>
+                            <option value="-7.0">Mountain Time (US &amp; Canada) (UTC-7)</option>
+                            <option value="-6.0">Central Time (US &amp; Canada), Mexico City (UTC-6)</option>
+                            <option value="-5.0">Eastern Time (US &amp; Canada), Bogota, Lima (UTC-5)</option>
+                            <option value="-4.0">Atlantic Time (Canada), Caracas, La Paz (UTC-4)</option>
+                            <option value="-3.5">Newfoundland (UTC-3.5)</option>
+                            <option value="-3.0">Brazil, Buenos Aires, Georgetown (UTC-3)</option>
+                            <option value="-2.0">Mid-Atlantic (UTC-2)</option>
+                            <option value="-1.0">Azores, Cape Verde Islands (UTC-1)</option>
+                            <option value="0.0" selected>London, Lisbon, Casablanca (UTC)</option>
+                            <option value="1.0">Brussels, Copenhagen, Madrid, Paris (UTC+1)</option>
+                            <option value="2.0">Kaliningrad, South Africa (UTC+2)</option>
+                            <option value="3.0">Baghdad, Riyadh, Moscow, St. Petersburg (UTC+3)</option>
+                            <option value="3.5">Tehran (UTC+3.5)</option>
+                            <option value="4.0">Abu Dhabi, Muscat, Baku, Tbilisi (UTC+4)</option>
+                            <option value="4.5">Kabul (UTC+4.5)</option>
+                            <option value="5.0">Ekaterinburg, Islamabad, Karachi, Tashkent (UTC+5)</option>
+                            <option value="5.5">Bombay, Calcutta, Madras, New Delhi (UTC+5.5)</option>
+                            <option value="5.75">Kathmandu (UTC+5.75)</option>
+                            <option value="6.0">Almaty, Dhaka, Colombo (UTC+6)</option>
+                            <option value="7.0">Bangkok, Hanoi, Jakarta (UTC+7)</option>
+                            <option value="8.0">Beijing, Perth, Singapore, Hong Kong (UTC+8)</option>
+                            <option value="9.0">Tokyo, Seoul, Osaka, Sapporo, Yakutsk (UTC+9)</option>
+                            <option value="9.5">Adelaide, Darwin (UTC+9.5)</option>
+                            <option value="10.0">Eastern Australia, Guam, Vladivostok (UTC+10)</option>
+                            <option value="11.0">Magadan, Solomon Islands, New Caledonia (UTC+11)</option>
+                            <option value="12.0">Auckland, Wellington, Fiji, Kamchatka (UTC+12)</option>
                         </select>
                     </label>
 
