Add keyboard shortcuts

--- a/core/admin/views/editor.hbs
+++ b/core/admin/views/editor.hbs
@@ -4,6 +4,7 @@
     <script src="/core/admin/assets/lib/showdown/showdown.js"></script>
     <script src="/core/admin/assets/lib/showdown/extensions/ghostdown.js"></script>
     <script src="/core/admin/assets/lib/shortcuts.js"></script>
+    <script src="/core/admin/assets/js/markdown-actions.js"></script>
     <script src="/core/admin/assets/js/editor.js"></script>
     <script src="/core/admin/assets/js/tagui.js"></script>
 {{/contentFor}}
