Added logout functionality, helper links and more cookie time

--- a/core/admin/views/partials/navbar.hbs
+++ b/core/admin/views/partials/navbar.hbs
@@ -17,7 +17,7 @@
                     <li class="usermenu-help"><a href="#">Help / Support</a></li>
                     <li class="usermenu-shortcuts"><a href="#">Keyboard Shortcuts</a></li>
                     <li class="divider"></li>
-                    <li class="usermenu-signout"><a href="#">Sign Out</a></li>
+                    <li class="usermenu-signout"><a href="/logout/">Sign Out</a></li>
                 </ul>
             </li>
         </ul>
