--- a/core/admin/views/register.hbs
+++ b/core/admin/views/register.hbs
@@ -8,4 +8,5 @@
         <input class="password" type="password" placeholder="Password" name="password">
     </div>
     <button class="button-save" type="submit">Register</button>
+    <a href="/ghost/login/">Log in</a>
 </form>
