--- a/core/admin/views/login.hbs
+++ b/core/admin/views/login.hbs
@@ -8,4 +8,5 @@
         <input class="password" type="password" placeholder="Password" name="password">
     </div>
     <button class="button-save" type="submit">Log in</button>
+    <a href="/ghost/register/">Register</a>
 </form>
