Crude post delete functionality, closes #42

--- a/core/admin/views/blog.hbs
+++ b/core/admin/views/blog.hbs
@@ -47,9 +47,9 @@
         <a class="post-edit" href="#"><span class="hidden">Edit Post</span></a>
         <a class="post-settings" href="#" data-toggle=".menu-drop-right"><span class="hidden">Post Settings</span></a>
         <ul class="menu-drop-right">
-            <li><a href="#">URL</a></li>
-            <li><a href="#">Something</a></li>
-            <li><a href="#">Delete</a></li>
+            <li><a href="#" class="url">URL</a></li>
+            <li><a href="#" class="something">Something</a></li>
+            <li><a href="#" class="delete">Delete</a></li>
         </ul>
     </section>
 </header>
