--- a/core/admin/assets/sass/modules/mixins.scss
+++ b/core/admin/assets/sass/modules/mixins.scss
@@ -3,7 +3,7 @@
  * common property values throughout our styles. Don't overdo it.
  *
  * Table of Contents:
- * 
+ *
  * Compass Shit
  * Compass Plugins
  * Colors
@@ -19,7 +19,7 @@
    ============================================================================= */
 
 // Bourbon - http://bourbon.io/
-@import "bourbon";
+@import "bourbon/bourbon";
 $rounded: 2px;
 $shadow: rgba(0,0,0,0.05) 0 1px 5px;
 $default-transition-duration: 0.3s;
