Fixing bug in registration
Switching over to abstracted data provider meant that email_address
accidentally got passed to the model as email and therefore could not
be found. This is now resolved.
Also, added trailing slash to register route, which I believe should be there

--- a/core/admin/views/register.hbs
+++ b/core/admin/views/register.hbs
@@ -2,7 +2,7 @@
 <img class="login-logo" src="/core/admin/assets/img/logo.png" alt="" />
 <form id="register" method="post">
     <div class="email-wrap">
-        <input class="email" type="text" placeholder="Email Address" name="email">
+        <input class="email_address" type="text" placeholder="Email Address" name="email_address">
     </div>
     <div class="password-wrap">
         <input class="password" type="password" placeholder="Password" name="password">
