--- a/core/admin/views/debug.hbs
+++ b/core/admin/views/debug.hbs
@@ -4,7 +4,7 @@
         <header>
             <h1 class="title">Ugly Debug Tools</h1>
         </header>
-        <nav class="settings-menu">
+        <nav class="settings-menu js-settings-menu">
             <ul>
                 <li class="Data management"><a href="#">General</a></li>
             </ul>
