--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -23,14 +23,9 @@
         <link rel="stylesheet" type="text/css" href="/core/admin/assets/lib/codemirror/codemirror.css"> <!-- TODO: Kill this - #29 -->
         <link rel="stylesheet" type="text/css" href="/core/admin/assets/lib/icheck/css/icheck.css"> <!-- TODO: Kill this - #29 -->
         {{{block "pageStyles"}}}
-
-        <script type="text/javascript" src="/core/admin/assets/lib/jquery/jquery.min.js"></script>
-        <script type="text/javascript" src="/core/admin/assets/lib/icheck/jquery.icheck.min.js"></script> <!-- The right place for this? -->
-        <script type="text/javascript" src="/core/admin/assets/js/toggle.js"></script>
-        <script type="text/javascript" src="/core/admin/assets/js/admin-ui-temp.js"></script>
-        {{{block "headScripts"}}}
     </head>
-    <body class="{{bodyClass}}">
+
+    <body class="{{bodyClass}}" id="js-body-{{bodyClass}}">
         {{#unless hideNavbar}}
             {{> navbar}}
         {{/unless}}
@@ -40,7 +35,40 @@
 
             {{{body}}}
         </main>
-
-        {{{block "bodyScripts"}}}
     </body>
+
+    <!-- Scripts for the app, for now (should eventually concat & minify with grunt) -->
+    <script type="text/javascript" src="/core/admin/assets/lib/json2.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/underscore.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/backbone.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/lib/backbone-addons.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/lib/jquery-addons.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/chart.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/icheck/jquery.icheck.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/codemirror/codemirror.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/codemirror/mode/markdown/markdown.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/showdown/showdown.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/showdown/extensions/ghostdown.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/lib/shortcuts.js"></script>
+
+    <!-- The App -->
+    <script>
+        var Ghost = {
+            Models: {},
+            Views: {},
+            Collections: {}
+        };
+        var GhostData = {};
+    </script>
+    <script type="text/javascript" src="/core/admin/assets/js/models/post.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/models/setting.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/models/user.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/views/blog.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/views/editor.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/views/dashboard.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/views/settings.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/views/partials.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/router.js"></script>
+    <script type="text/javascript" src="/core/admin/assets/js/starter.js"></script>
 </html>
