--- a/core/admin/views/settings.hbs
+++ b/core/admin/views/settings.hbs
@@ -1,18 +1,14 @@
-{{#contentFor 'bodyScripts'}}
-    <script src="/core/admin/assets/js/settings.js"></script>
-{{/contentFor}}
-
 {{!< default}}
 <div class="wrapper">
     <aside class="settings-sidebar" role="complementary">
         <header>
             <h1 class="title">Settings</h1>
         </header>
-        <nav class="settings-menu">
+        <nav class="settings-menu js-settings-menu">
             <ul>
-                <li class="general active"><a href="#general">General</a></li>
-                <li class="publishing"><a href="#content">Content</a></li>
-                <li class="users"><a href="#users">Users</a></li>
+                <li class="general active"><a href="/ghost/settings/general">General</a></li>
+                <li class="publishing"><a href="/ghost/settings/content">Content</a></li>
+                <li class="users"><a href="/ghost/settings/users">Users</a></li>
                 <li class="appearance"><a href="#">Appearance</a></li>
                 <li class="services"><a href="#">Connected Services</a></li>
                 <li class="plugins"><a href="#">Plugins</a></li>
@@ -23,7 +19,7 @@
         <header>
             <h2 class="title">General</h2>
             <section class="page-actions">
-                <button class="button-save">Save</button>
+                <button class="button-save js-save">Save</button>
             </section>
         </header>
         <section class="content">
@@ -90,7 +86,7 @@
         <header>
             <h2 class="title">Content</h2>
             <section class="page-actions">
-                <button class="button-save">Save</button>
+                <button class="button-save js-save">Save</button>
             </section>
         </header>
         <section class="content">
@@ -161,7 +157,7 @@
         <header>
             <h2 class="title">Users</h2>
             <section class="page-actions">
-                <button class="button-add">Add User</button>
+                <button class="button-add js-add-user">Add User</button>
             </section>
         </header>
         <section class="content">
