Add underscore + backbone dependencies

--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -28,6 +28,8 @@
         <script type="text/javascript" src="/core/admin/assets/lib/icheck/jquery.icheck.min.js"></script> <!-- The right place for this? -->
         <script type="text/javascript" src="/core/admin/assets/js/toggle.js"></script>
         <script type="text/javascript" src="/core/admin/assets/js/admin-ui-temp.js"></script>
+        <script type="text/javascript" src="/core/admin/assets/lib/underscore.js"></script>
+        <script type="text/javascript" src="/core/admin/assets/lib/backbone/backbone.js"></script>
         {{{block "headScripts"}}}
     </head>
     <body class="{{bodyClass}}">
