--- a/core/admin/assets/sass/modules/mixins.scss
+++ b/core/admin/assets/sass/modules/mixins.scss
@@ -183,3 +183,10 @@ $green: #9FBB58;
     }
   }
 }
+
+/* =============================================================================
+   Widgets
+   ============================================================================= */
+
+$widget-base-height: 300px;
+$widget-base-width: 340px;
