#73: Remap app.locals done

--- a/core/admin/views/default.hbs
+++ b/core/admin/views/default.hbs
@@ -6,10 +6,9 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Ghost</title>
-        <meta name="description" content="">
+        <title>{{siteTitle}}</title>
+        <meta name="description" content="{{siteDescription}}">
         <meta name="author" content="">
-
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
